--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,21 @@
 # This file will be committed to version control, so make sure not to have any secrets in it.
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
-# The database URL is used to connect to the database
-DATABASE_URL='mysql://user:password@host/db?sslaccept=strict'
+
+
+# @see https://www.prisma.io/docs/reference/database-reference/connection-urls
+# @see https://supabase.com/docs/guides/integrations/prisma#connection-pooling-with-supabase
+# PostgreSQL connection string with pgBouncer config — used by Prisma Client
+DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT_REF.supabase.co:5432/postgres?pgBouncer=true"
+# PostgreSQL connection string used for migrations
+DIRECT_URL="postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT_REF.supabase.co:5432/postgres"
+
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_ANON_KEY"
+
+
+
 
 # @see https://next-auth.js.org/configuration/options#nextauth_url
 NEXTAUTH_URL='http://localhost:3000'
